--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.4",
+    "sweetalert2": "^11.24.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
